--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           </p>
         </div>
         <div class="right-div">
-          <form class="form">
+          <form class="form" id="query-contact-form">
             <div class="form-group">
               <label for="name" class="form-group__label">Your name</label>
               <input
@@ -620,7 +620,7 @@
               <input
                 type="email"
                 name="email"
-                id="email"
+                id="emailM"
                 class="form-group__input"
               />
             </div>
@@ -728,14 +728,8 @@
         </div>
       </div>
     </footer>
-
-    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-storage.js"></script>
-    <script src="./dist/js/firebaseConf.js"></script>
-    <script src="./dist/js/authentication.js"></script>
-    <script src="./dist/js/database.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.js"></script>
     <script src="./dist/js/main.js"></script>
+    <script src="./dist/js/query.js"></script>
   </body>
 </html>
