allowing other functionality for full  integration.

--- a/articles.html
+++ b/articles.html
@@ -14,6 +14,9 @@
     <title>Articles provided by Emmanuel</title>
   </head>
   <body>
+    <div class="loader-container loader-hide">
+      <div class="loader" id="loader"></div>
+    </div>
     <header class="header">
       <nav class="header__nav">
         <div class="header__nav--container">
