--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Emmanuel's Brand</title>
   </head>
   <body>
+    <div class="loader-container loader-hide">
+      <div class="loader " id="loader"></div>
+    </div>
     <header class="header">
       <nav class="header__nav">
         <div class="header__nav--container">
@@ -23,7 +26,7 @@
           <a href="#experience-sec" class="header__nav--item btn">Experience</a>
           <a href="#projects-sec" class="header__nav--item btn">Projects</a>
           <a href="#contact-sec" class="header__nav--item btn">Contact</a>
-          <a href="./articles.html" class="header__nav--item btn">Articles</a>
+          <a href="./dashboard.html" class="header__nav--item btn">Articles</a>
         </div>
         <button class="btn" id="btn-deactive">
           <img src="./dist/img/bars.svg" alt="" />
@@ -32,7 +35,7 @@
           <button class="header__nav--item btn btn__login">
             Login
           </button>
-          <a href="#" class="header__nav--item btn user-dashboard">
+          <a href="./dashboard.html" class="header__nav--item btn user-dashboard">
             Dashboard
           </a>
           <button class="header__nav--item btn user-logout">
@@ -42,7 +45,7 @@
       </nav>
       <div class="header__intro">
         <h5 class="primary--header">
-          <span>Hi, I'm ASIFIWE Emmanuel.</span> Machine Learning Engineer.
+          <span>Hi, I'm ASIFIWE Emmanuel.</span> Machine Learning Engineer Junior.
         </h5>
       </div>
 
