improve front-end responsiveness

--- a/articles.html
+++ b/articles.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link id="theme-style" rel="stylesheet" href="" />
+
     <title>Articles provided by Emmanuel</title>
   </head>
   <body>
@@ -39,7 +41,7 @@
 
       <div class="header__profile">
         <img
-          src="./dist/img/profile-picture.jpg"
+          src="./dist/img/profile-picture.png"
           alt="Profile picture"
           class="header__profile--img"
         />
@@ -297,5 +299,6 @@
     </footer>
     <script src="./dist/js/articles.js"></script>
     <!-- <script src="./dist/js/main.js"></script> -->
+    <script src="./dist/js/theme-js.js"></script>
   </body>
 </html>
