--- a/dashboard-edit-article.html
+++ b/dashboard-edit-article.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link id="theme-style" rel="stylesheet" href="" />
+
     <title>Emmanuel's Brand || Edit Article</title>
   </head>
   <body>
@@ -42,7 +44,7 @@
 
       <div class="header__profile">
         <img
-          src="./dist/img/profile-picture.jpg"
+          src="./dist/img/profile-picture.png"
           alt="Profile picture"
           class="header__profile--img"
         />
@@ -147,5 +149,6 @@
     <script src="./dist/js/tinyMCE.js"></script>
     <script src="./dist/js/main.js"></script>
     <script src="./dist/js/fileInput.js"></script>
+    <script src="./dist/js/theme-js.js"></script>
   </body>
 </html>
