--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link id="theme-style" rel="stylesheet" href="" />
+
     <title>Emmanuel's Brand</title>
   </head>
   <body>
@@ -47,7 +49,7 @@
 
       <div class="header__profile">
         <img
-          src="./dist/img/profile-picture.jpg"
+          src="./dist/img/profile-picture.png"
           alt="Profile picture"
           class="header__profile--img"
         />
@@ -330,6 +332,7 @@
     <!-- <script src="./dist/js/views.js"></script> -->
     <script src="./dist/js/user-dashboard.js"></script>
     <!-- <script src="./dist/js/fileInput.js"></script> -->
+    <script src="./dist/js/theme-js.js"></script>
   </body>
 </html>
 
