--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link id="theme-style" rel="stylesheet" href="" />
     <title>Articles provided by Emmanuel</title>
   </head>
   <body>
@@ -43,7 +44,7 @@
 
       <div class="header__profile">
         <img
-          src="./dist/img/profile-picture.jpg"
+          src="./dist/img/profile-picture.png"
           alt="Profile picture"
           class="header__profile--img"
         />
@@ -137,5 +138,6 @@
     </footer>
 
     <script src="./dist/js/main.js"></script>
+    <script src="./dist/js/theme-js.js"></script>
   </body>
 </html>
