--- a/thank_you.html
+++ b/thank_you.html
@@ -15,6 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="./dist/css/main.css" />
+    <link id="theme-style" rel="stylesheet" href="" />
+
     <title>Emmanuel's Brand | Thank you for your query</title>
   </head>
   <body>
@@ -27,5 +29,7 @@
       </div>
       <a href="./index.html" class="btn btn__primary">Back Home</a>
     </div>
+
+    <script src="./dist/js/theme-js.js"></script>
   </body>
 </html>
